--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 			<div class="card">
 				<div class="card-body">
 					<div class="row d-flex align-items-center">
-						<div class="col-1">
+						<div class="col-2 mb-3 col-md-1 mb-md-0 order-md-1">
 							<button class="btn btn-primary" id="play-pause"><i class="fas fa-play"></i></button>
 						</div>
-						<div class="col-2">
-							<span id="time-elapsed">0:00</span> / <span id="total-time">0:00</span>
-						</div>
-						<div class="col">
+						<div class="col-10 mb-3 col-md-6 mb-md-0 order-md-3">
 							<input class="form-range" type="range" id="duration-bar" value="0">
 						</div>
-						<div class="col-1">
+						<div class="col-6 col-md-2 order-md-2">
+							<span id="time-elapsed">0:00</span> / <span id="total-time">0:00</span>
+						</div>
+						<div class="col-2 col-md-1 order-md-4">
 							<button class="btn btn-primary" id="mute"><i class="fas fa-volume-up"></i></button>
 						</div>
-						<div class="col-2">
+						<div class="col-4 col-md-2 order-md-5">
 							<input class="form-range" type="range" id="volume-bar" value="100">
 						</div>
 					</div>
