--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="container my-5">
 			<h1 class="mb-5">Music Player</h1>
 			<audio src="music/track.mp3" id="audio"></audio>
-			<div class="card">
+			<div class="card mb-5">
 				<div class="card-body">
 					<div class="row d-flex align-items-center">
 						<div class="col-2 mb-3 col-md-1 mb-md-0 order-md-1">
@@ -32,9 +32,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="mt-5">
-				<small>Developed by <a href="https://robertd.co.uk">Robert Dixon</a>.</small>
-			</div>
+			<p>Developed by <a href="https://robertd.co.uk">Robert Dixon</a></p>
 		</div>
 		<script src="js/script.js"></script>
 	</body>
